Layout für Detailansicht an Lastenheft-Vorgaben angepasst

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -68,6 +68,7 @@ option.placeholder
   height: 100%
   position: absolute
   z-index: 1000
+  overflow-y: auto
 
 .sidebar .tab-content
   padding: 10px
@@ -89,15 +90,12 @@ option.placeholder
 .sideways > li.active > a
   opacity: 1.0
 
-.panel.panel-default
-  top: 20px
-
 .map-panel
   min-width: 140px
   max-width: 350px
   position: absolute
   top: 10px
-  right: 10px
+  right: 0
   z-index: 1000
 
 .panel-heading
@@ -134,11 +132,6 @@ header
 
 .container
   width: 95%
-
-.list-group.desktop
-  position: absolute
-  max-height: 80%
-  overflow-y: auto
 
 .panel-heading a
   display: block
