Beschreiben-Ansicht an Lastenheftvorgaben angepasst

--- a/app/views/requests/desktop/_start_request.html.erb
+++ b/app/views/requests/desktop/_start_request.html.erb
@@ -1,5 +1,5 @@
 <div id="request-start" class="request-container">
-  <div class="row">
+  <div class="row form-group">
     <div class="col-md-12">
       <%= t('.new_request') %>
     </div>
