--- a/app/views/requests/desktop/_new_position_buttons.html.erb
+++ b/app/views/requests/desktop/_new_position_buttons.html.erb
@@ -1,9 +1,13 @@
 <div class="request-container">
+  <div class="row form-group">
+    <%= label_tag :where, t('.where'), class: 'col-md-12' %>
+    <div class="col-md-12"><%= t('.place_icon') %></div>
+  </div>
   <div class="row">
     <div class="col-md-12">
       <div class="btn-group btn-group-justified" role="group">
-        <%= link_to(t('buttons.describe'), new_request_path(type: @request.type), class: 'btn btn-primary describe') %>
         <%= link_to(t('buttons.cancel'), [:map, cancel: true], remote: true, class: 'btn btn-default') %>
+        <%= link_to(t('buttons.continue'), new_request_path(type: @request.type), class: 'btn btn-primary describe') %>
       </div>
     </div>
   </div>
