--- a/app/views/requests/desktop/_category_select.html.erb
+++ b/app/views/requests/desktop/_category_select.html.erb
@@ -1,6 +1,5 @@
 <div id="type-select">
-  <div id="request-category-1" class="form-group category">
-    <label for="request_category_1" class="col-md-12 control-label"><%= Request.human_attribute_name(:category) %></label>
+  <div id="request-category-1" class="row form-group category">
     <div class="col-md-12">
       <%= select_tag(:request_category, categories(type), id: :request_category_1,
                      class: 'form-control', data: { update: :request_service_code_1 }) %>
