Änderungen der Oberflächen für Meldungen nach Konzept

--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -61,3 +61,8 @@ $ ->
       unless $(@).is(':checked')
         arr.push('not_' + $(@).attr('id'))
     KS.reloadFeatures(filter)
+
+  $(document).on 'click', '.btn-continue', () ->
+    $('#form-page-' + $(@).data('current')).toggle()
+    $('#form-page-' + $(@).data('next')).toggle()
+    false
