--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
         <div class="container">
           <div class="systray">
             <center>
-              <%= link_to t(:mobile), [:root, mobile: true] %> |
+              <%= link_to t(:mobile), [:map, mobile: true] %> |
               <%= link_to t(:api), '#' %> |
               <%= link_to t(:impressum), '#' %>
             </center>
