--- a/app/views/requests/desktop/_new.html.erb
+++ b/app/views/requests/desktop/_new.html.erb
@@ -1,51 +1,69 @@
 <div id="request-form" class="request-container">
   <%= form_for(@request, remote: true, authenticity_token: true,
-    html: { class: 'fileupload', data: { 'validation-error-headline': t('requests.create.error.one') } }) do |f| %>
-    <%= f.hidden_field(:lat, data: { 'missing-message': t('requests.create.error.required.lat') }) %>
-    <%= f.hidden_field(:long, data: { 'missing-message': t('requests.create.error.required.long') }) %>
-    <div class="row form-group radio-btns" data-url="<%= new_request_path(switch_type: true) %>">
-      <%= label_tag :what, t('.what'), class: 'col-md-12 control-label' %>
-      <div class="col-md-6">
-        <%= f.radio_button :type, 'problem', checked: true, class: 'radio-type' %> <%= label_tag :request_type_problem,
-          t('problem', scope: 'service.types', count: 1), class: 'check-label' %>
-      </div>
-      <div class="col-md-6">
-        <%= f.radio_button :type, 'idea', class: 'radio-type' %> <%= label_tag :request_type_idea,
-          t('idea', scope: 'service.types', count: 1), class: 'check-label' %>
-      </div>
-    </div>
-    <%= render partial: 'requests/desktop/category_select', locals: { type: 'problem' } %> 
-    <% if display?(:email) -%>
-      <div class="row form-group">
-        <div class="col-md-12">
-          <%= f.email_field(:email, class: 'form-control', placeholder: t('placeholder.email')) %>
+               html: { class: 'fileupload', data: { 'validation-error-headline': t('requests.create.error.one') } }) do |f| %>
+    <div id="form-page-1">
+      <%= f.hidden_field(:lat, data: { 'missing-message': t('requests.create.error.required.lat') }) %>
+      <%= f.hidden_field(:long, data: { 'missing-message': t('requests.create.error.required.long') }) %>
+      <div class="row form-group radio-btns" data-url="<%= new_request_path(switch_type: true) %>">
+        <%= label_tag :what, t('.what'), class: 'col-md-12 control-label' %>
+        <div class="col-md-6">
+          <%= f.radio_button :type, 'problem', checked: true, class: 'radio-type' %> <%= label_tag :request_type_problem,
+            t('problem', scope: 'service.types', count: 1), class: 'check-label' %>
+        </div>
+        <div class="col-md-6">
+          <%= f.radio_button :type, 'idea', class: 'radio-type' %> <%= label_tag :request_type_idea,
+            t('idea', scope: 'service.types', count: 1), class: 'check-label' %>
         </div>
       </div>
-    <% end -%>
-    <div class="row form-group">
-      <div class="col-md-12">
-        <%= f.text_area(:description, rows: 5, class: 'form-control', placeholder: t('placeholder.description'),
-                        data: { 'missing-message': t('requests.create.error.required.description') }) %>
+      <%= render partial: 'requests/desktop/category_select', locals: { type: 'problem' } %> 
+      <div class="row form-group">
+        <div class="col-md-12">
+          <%= f.text_area(:description, rows: 5, class: 'form-control', placeholder: t('placeholder.description'),
+                          data: { 'missing-message': t('requests.create.error.required.description') }) %>
+        </div>
+      </div>
+      <div class="row form-group">
+        <%= f.label(:media, Request.human_attribute_name(:media), class: 'col-md-12 control-label') %>
+        <div class="col-md-12">
+          <%= f.file_field(:media, multiple: false, accept: 'image/png,image/jpeg') %>
+        </div>
+      </div>
+      <div class="row form-group">
+        <div class="col-md-12">
+          <p class="form-control-static"><%= t('.hint.text') %></p>
+        </div>
+      </div>
+      <div class="row form-group">
+          <div class="btn-group btn-group-justified col-md-12" role="group">
+            <%= link_to(t('buttons.cancel'), map_path(cancel: true), remote: true, class: 'btn btn-default', role: :button) %>
+            <%= link_to(t('buttons.continue'), 'javascript:;', remote: true, class: 'btn btn-primary btn-continue',
+                        role: :button, data: { current: '1', next: 'submit' }) %>
+          </div>
       </div>
     </div>
-    <div class="row form-group">
-      <%= f.label(:media, Request.human_attribute_name(:media), class: 'col-md-12 control-label') %>
-      <div class="col-md-12">
-        <%= f.file_field(:media, multiple: false, accept: 'image/png,image/jpeg') %>
+    <div id="form-page-submit">
+      <div class="row form-group">
+        <%= label_tag :confirmation, t('.confirmation'), class: 'col-md-12 control-label' %>
+        <div class="col-md-12">
+          <%= t('.confirmation_text') %>
+        </div>
       </div>
-    </div>
-    <div class="row form-group">
-      <div class="col-md-12">
-        <p class="form-control-static"><%= t('.hint.text') %></p>
-      </div>
-    </div>
-    <div class="row form-group">
+      <% if display?(:email) -%>
+        <div class="row form-group">
+          <div class="col-md-12">
+            <%= f.email_field(:email, class: 'form-control', placeholder: t('placeholder.email')) %>
+          </div>
+        </div>
+      <% end -%>
+      <div class="row form-group">
         <div class="btn-group btn-group-justified col-md-12" role="group">
-          <%= link_to(t('buttons.cancel'), map_path(cancel: true), remote: true, class: 'btn btn-default', role: :button) %>
+          <%= link_to(t('buttons.back'), 'javascript:;', remote: true, class: 'btn btn-default btn-continue',
+                      role: :button, data: { current: 'submit', next: '1' }) %>
           <div class="btn-group" role="group">
             <%= f.submit(t('buttons.save'), class: 'btn btn-primary') %>
           </div>
         </div>
+      </div>
     </div>
   <% end %>
 </div>
