--- a/app/views/abuses/mobile/_new.html.erb
+++ b/app/views/abuses/mobile/_new.html.erb
@@ -5,6 +5,7 @@
     </div>
     <div class="panel-body">
       <%= form_for([:request, @abuse], remote: true) do |f| %>
+        <%= hidden_field_tag :mobile, @mobile %>
         <div class="form-group">
           <span class="helper-block">
             <strong><%= t('.hint.label') %>:</strong>
@@ -33,7 +34,7 @@
               <div class="btn-group" role="group">
                 <%= f.submit(t('buttons.submit'), class: 'btn btn-default btn-primary') %>
               </div>
-              <%= link_to(t('buttons.cancel'), [@request, id_list: @id_list], remote: true, class: 'btn btn-default', role: :button) %>
+              <%= link_to(t('buttons.cancel'), [@request, id_list: @id_list, mobile: @mobile], remote: true, class: 'btn btn-default', role: :button) %>
             </div>
             <% @id_list.each do |idl| -%>
               <%= f.hidden_field "id_list][", :value => idl, id: nil %>
