Oberflächen für Kommentare an Desktop-Umgebung angepasst

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,7 @@
     <div id="image-sources">
       <img id="new-idea" src="<%= image_path 'icons/map/active/png/idea-gray.png' %>" />
       <img id="new-problem" src="<%= image_path 'icons/map/active/png/problem-gray.png' %>" />
+      <img id="new-blank" src="<%= image_path 'icons/map/active/png/blank-gray.png' %>" />
       <% if login_required? -%>
         <img id="new-tip" src="<%= image_path 'icons/map/active/png/tip-gray.png' %>" />
       <% end -%>
