--- a/app/views/comments/desktop/_new.html.erb
+++ b/app/views/comments/desktop/_new.html.erb
@@ -1,18 +1,12 @@
-<div id="new-abuse" class="request-container">
+<div id="new-comment" class="request-container">
   <%= render partial: '/requests/desktop/request_header', locals: { label_photo_required: nil } %>
-  <%= form_for([:request, @abuse], remote: true) do |f| %>
+  <%= form_for([:request, @comment], remote: true) do |f| %>
     <div class="row form-group">
-        <%= label_tag :abuse, t('.title'), class: 'col-md-12 control-label' %>
-      </div>
-      <%= label_tag :hint, t('.hint.label'), class: 'col-md-12 control-label' %>
-      <div class="col-md-12">
-        <%= t('.hint.text') %>
-        <em class="text-danger"><%= t('.hint.warning_html') %></em>
-      </div>
+      <%= label_tag :comment, t('.title'), class: 'col-md-12 control-label' %>
     </div>
     <div class="row form-group">
       <div class="col-md-12">
-        <%= f.text_area(:comment, rows: 4, class: 'form-control', placeholder: t('placeholder.reason')) %>
+        <%= f.text_area(:comment, rows: 4, class: 'form-control', placeholder: t('placeholder.comment')) %>
       </div>
     </div>
     <div class="row form-group">
