--- a/app/views/places/mobile/_index.html.erb
+++ b/app/views/places/mobile/_index.html.erb
@@ -1,5 +1,6 @@
 <div class="places">
   <%= form_for(:places, method: :get, remote: true) do |f| %>
+    <%= hidden_field_tag :mobile, @mobile %>
     <div class="row">
       <div class="col-md-9">
         <div class="form-group has-feedback has-clear">
