--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -44,7 +44,6 @@ class KS.Map
           features = feature.get('features')
           url = KS.requests_path
           if features.length == 1
-            console.log(features[0])
             # Single feature -> show
             url += features[0].get("id")
             url += "?mobile=" + KS.getUrlParam("mobile") if KS.getUrlParam("mobile")
@@ -161,7 +160,7 @@ KS.imagePath = (type) ->
 
 
 class KS.Layers
-  constructor: (map) ->
+  constructor: (map, requests) ->
     @active = 0
     @layers = []
     for layer in <%= Settings::Map.wmts_layers.to_json %>
@@ -200,7 +199,7 @@ class KS.Layers
       id: "features"
       source: new ol.source.Cluster
         distance: 55
-        source: new KS.FeatureVector(KS.requests_path)
+        source: new KS.FeatureVector(KS.requests_path, true)
       style: KS.styles.featureStyle
       visible: true
     
@@ -231,16 +230,17 @@ class KS.Layers
 
 
 class KS.FeatureVector
-  constructor: (controller) ->
+  constructor: (controller, is_request = false) ->
     return vector = new ol.source.ServerVector
       format: new ol.format.TopoJSON
       loader: (extent, resolution, projection) ->
-        new KS.FeatureData(controller, extent, vector)
+        new KS.FeatureData(controller, extent, vector, is_request)
       projection: KS.projection()
 
 
 class KS.FeatureData
-  constructor: (controller, extent, vector) ->
+  constructor: (controller, extent, vector, is_request = false) ->
+    controller = KS.generatePath() if is_request
     ls = new ol.geom.LineString([ol.extent.getBottomLeft(extent), ol.extent.getTopRight(extent)])
     extent = ol.proj.transformExtent(extent, KS.projection(), KS.projectionWGS84)
     wgs84Sphere = new ol.Sphere(6378137)
@@ -342,16 +342,17 @@ KS.clearNewFeature= () ->
   if KS.newFeatureInteraction
     KS.olMap.removeInteraction KS.newFeatureInteraction
 
-KS.reloadFeatures= (params = null) ->
+KS.reloadFeatures= () ->
   extent = KS.olMap.getView().calculateExtent(KS.olMap.getSize())
-  new KS.FeatureData(KS.generatePath(params), extent, KS.layers.findById("features").getSource().getSource())
+  new KS.FeatureData(KS.generatePath(), extent, KS.layers.findById("features").getSource().getSource(), true)
   if KS.login_required
     new KS.FeatureData(KS.jobs_path, extent, KS.layers.findById("jobs").getSource().getSource())
 
-KS.generatePath= (params) ->
+KS.generatePath= () ->
+  params = KS.getMapPanelParams()
   path = KS.requests_path
   path += "#{ if path.contains?('?') then '&' else '?' }" + params.map(
-    (obj) -> obj + '=true').join('&') if params?
+    (obj) -> obj + '=true').join('&') if params.length > 0
   path
 
 #eine 'show'-Anfrage gegen den Requests-Controller senden, wenn im URL-Query ein 'request'-Parameter gefunden wurde
