--- a/app/views/maps/_desktop.html.erb
+++ b/app/views/maps/_desktop.html.erb
@@ -47,19 +47,19 @@
             <div class="col-md-6">
               <div class="row">
                 <div class="col-md-12">
-                  <%= check_box_tag :show_open, nil, true, class: 'show-feature', id: 'open' %>
+                  <%= check_box_tag :show_open, nil, true, class: 'show-feature', id: 'open', data: { key: 'status' } %>
                   <%= label_tag :open, t('status.received'), class: 'check-label' %>
                 </div>
                 <div class="col-md-12">
-                  <%= check_box_tag :show_in_process, nil, true, class: 'show-feature', id: 'in_process' %>
+                  <%= check_box_tag :show_in_process, nil, true, class: 'show-feature', id: 'in_process', data: { key: 'status' } %>
                   <%= label_tag :in_process, t('status.in_process'), class: 'check-label' %>
                 </div>
                 <div class="col-md-12">
-                  <%= check_box_tag :show_solved, nil, true, class: 'show-feature', id: 'solved' %>
+                  <%= check_box_tag :show_solved, nil, true, class: 'show-feature', id: 'solved', data: { key: 'status' } %>
                   <%= label_tag :solved, t('status.processed'), class: 'check-label' %>
                 </div>
                 <div class="col-md-12">
-                  <%= check_box_tag :show_rejected, nil, true, class: 'show-feature', id: 'rejected' %>
+                  <%= check_box_tag :show_rejected, nil, true, class: 'show-feature', id: 'rejected', data: { key: 'status' } %>
                   <%= label_tag :rejected, t('status.rejected'), class: 'check-label' %>
                 </div>
               </div>
@@ -67,11 +67,11 @@
             <div class="col-md-6">
               <div class="row">
                 <div class="col-md-12">
-                  <%= check_box_tag :show_problem, nil, true, class: 'show-feature', id: 'problem' %>
+                  <%= check_box_tag :show_problem, nil, true, class: 'show-feature', id: 'problem', data: { key: 'type' } %>
                   <%= label_tag :problem, t('problem', scope: 'service.types', count: 1), class: 'check-label' %>
                 </div>
                 <div class="col-md-12">
-                  <%= check_box_tag :show_idea, nil, true, class: 'show-feature', id: 'idea' %>
+                  <%= check_box_tag :show_idea, nil, true, class: 'show-feature', id: 'idea', data: { key: 'type' } %>
                   <%= label_tag :idea, t('idea', scope: 'service.types', count: 1), class: 'check-label' %>
                 </div>
               </div>
