Keine ungültigen Paremter-Werte weiterschicken

--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -49,7 +49,7 @@ KS.getMapPanelParams = () ->
   filter = []
   if $('.show-feature[data-key=status]').length > 0
     filter.push('status[]=')
-  if $('.show-feature[data-key=type]').length > 0
+  if $('.show-feature[data-key=typ]').length > 0
     filter.push('typ[]=')
 
   $('.show-feature').each () ->
