starts-route als root

--- a/app/views/starts/show.html.erb
+++ b/app/views/starts/show.html.erb
@@ -17,7 +17,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <%= link_to t('buttons.requests'), [:map], role: :button, class: 'btn btn-default' %>
+            <%= link_to t('buttons.requests'), [:map], role: :button, class: 'btn btn-default', data: { turbolinks: false } %>
           </div>
         </div>
       </div>
