--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <div class="container">
           <div class="systray">
             <center>
-              <h1>Klarschiff.HRO</h1>
+              <h1><%= t('header_title') %></h1>
             </center>
           </div>
         </div>
