--- a/app/views/requests/desktop/_request_header.html.erb
+++ b/app/views/requests/desktop/_request_header.html.erb
@@ -19,7 +19,8 @@
         <%= mark_trust(@request) %>
       <% end -%>
       <b>
-        <%= link_to [:map, request: @request.id], title: t('buttons.perma_link', req_id: @request.id) do %>
+        <%= link_to [:map, request: @request.id], title: t('buttons.perma_link', req_id: @request.id),
+          data: { turbolinks: false } do %>
           <span class="glyphicon glyphicon-link">
         <% end -%>
       </b>
