--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -72,12 +72,7 @@ header
   height: 100px
 
   .systray
-    position: relative
     color: #1c94c4
-
-    > div
-      position: absolute
-      right: 0
 
 .footer
   position: fixed
@@ -110,9 +105,12 @@ header
 
 .sideways > li
   left: -28px
+  height: 20px
+  width: 120px
   margin-bottom: 100px
 
 .sideways > li > a
+  height: 42px
   background-color: #fff
   opacity: 0.8
 
