--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -13,6 +13,7 @@
 #= require jquery
 #= require jquery_ujs
 #= require jquery.form
+#= require jquery.textresizer
 #= require jquery-ui
 #= require jquery-ui/widgets/sortable
 #= require jquery.ui.touch-punch
@@ -78,3 +79,6 @@ $ ->
   $(document).on 'click', '.sidebar-tab', () ->
     unless $('.' + $(@).data('tab') + '-container').length > 0
       $.get($(@).data('url'), null, null, 'script')
+  
+  $(document).ready () ->
+    $('#textsizer a').textresizer({ target: '#main-content' })
