--- a/app/views/requests/desktop/_request_header.html.erb
+++ b/app/views/requests/desktop/_request_header.html.erb
@@ -2,7 +2,7 @@
   <div class="row form-group">
     <h4>
       <div class="col-md-10">
-        <%= @request.service.group %>
+        <%= @request.service %>
       </div>
       <div class="col-md-2">
         <%= link_to [:requests, back: true], data: { type: 'script', remote: true }, title: t('buttons.close') do %>
