Anfragen von Beobachtungsflächen

--- a/app/views/maps/_desktop.html.erb
+++ b/app/views/maps/_desktop.html.erb
@@ -8,6 +8,7 @@
         <div id="places" class="tab-pane">
         </div>
         <div id="watch" class="tab-pane">
+          <%= render partial: 'areas/index' %>
         </div>
       </div>
       <ul class="nav nav-tabs tabs-right sideways">
